--- a/Truss.html
+++ b/Truss.html
@@ -12,6 +12,7 @@
 	<script src="Javascript/Nodes/TrussNode.js" type="text/javascript"></script>
 	<script src="Javascript/Tensors.js" type="text/javascript"></script>
 	<script src="Javascript/Truss.js" type="text/javascript"></script>
+	<script src="Javascript/Universe.js" type="text/javascript"></script>
 	<script src="Javascript/Nodes/Actuators.js" type="text/javascript"></script>
 	<script src="Javascript/Nodes/Sensors.js" type="text/javascript"></script>
 	<script src="Javascript/ParameterEditor/Property.js" type="text/javascript"></script>
@@ -33,165 +34,62 @@
 <body style="background-color: #343f48; margin:0px;" onresize="updateResize()">
 
 	<section>
-		<div id="TrussBackground" class="trussBackgroundDiv" align="left">
-		<!-- 	<div class="configareaouter" id="configarea">
-				<div class="configareainner">
+		<div id="temp"></div>
 
-					<div class="tab">
-						<button class="tabsectionbuttons" id="propertiesButton" onclick="movePropertyEdit('propertyConfigArea'); openBottomPanel(event, 'propertiesDiv')">PROPERTIES</button>
-						<button class="tabsectionbuttons" onclick="movePropertyEdit('trussConfigArea'); openBottomPanel(event, 'trussDiv'); ">TRUSS</button>
-						<button class="tabsectionbuttons advanced" onclick="openBottomPanel(event, 'fileDiv'); directory('Saves');">FILE</button>
-					</div>
-
-					<div id="propertiesDiv" class="footerbackgroundarea tabcontent">
-						<div class="sectionbase">
-							<div id="propertyConfigArea">
-								<div id="configview" class="sectionmiddle"></div>
-							</div>
-
-							<div id="connectionDiv" class="sectionmiddle" align="right"></div>
-
-
-							<div id="addDiv" class="sectionlast"  align="right">
-								<div>
-									<select id='nodeType' oninput='' class="inputcss">
-										<option value='Node'>Node</option>
-										<option value=''>--Sensors--</option>
-										<option value='KeySensorNode'>KeySensor</option>
-										<option value='ProximitySensornODE'>ProximitySensor</option>
-										<option value=''>--Actuators--</option>
-										<option value='jumpNode'>JumpNodeActuator</option>
-										<option value='LeftRightNode'>LeftRightActuator</option>
-										<option value='Linebreakernode'>LinebreakerActuator</option>
-									</select>
-									<button class="simpleButton" type="button" onclick="makeNode()">Create</button>
-								</div>
-								<div id="tensorAdder">
-									<select id='tensorType' oninput='' class="inputcss">
-										<option value='Spring'>Spring</option>
-										<option value='PullSpring'>PullSpring</option>
-										<option value='Absorber'>Absorber</option>
-										<option value='Field'>Field</option>
-										<option value='PictureSpring'>PictureSpring</option>
-									</select>
-									<button class="simpleButton" type="button" onclick="makeTensor()">Create</button>
-								</div>
-							</div>
-						</div>
-
-						<div class="sectionlast">
-							<button class="simpleButton" type="button" onclick="mainNode.togglePause()">Pause</button>
-							<button id="gravityButton" class="simpleButton" type="button" onclick="addGravityCheat();">Gravity</button>
-							<button class="simpleButton" type="button" onclick="deleteSelected()">Delete</button>
-
-							<select id='debugLevel'class ="inputcss" onchange='changeDebugLevel();'>
-								<option value='1'>Debug level</option>
-								<option value='0'>0 - Nothing</option>
-								<option value='1'>1 - Only web parts</option>
-								<option value='2'>2 - Only lines</option>
-								<option value='3'>3 - Only nodes</option>
-								<option value='5'>5 - Lines and Nodes</option>
-								<option value='6'>6 - Add speeds</option>
-								<option value='7'>7 - Add acceleration</option>
-								<option value='10'>10 - Add numbers</option>
-							</select>
-						</div>
-					</div>
-
-					<div id="trussDiv" class="footerbackgroundarea tabcontent">
-
-						<div class="sectionbase">
-
-							<div id="trussConfigArea"></div>
-						</div>
-						<div class="sectionlast">
-							<button class="simpleButton" type="button">TrussNode</button>
-							<button class="simpleButton" type="button">gravityNode</button>
-							<button class="simpleButton" type="button">selectorNode</button>
-						</div>
-					</div>
-
-
-					<div id="fileDiv" class="footerbackgroundarea tabcontent">
-
-						<div class="sectionbase" align="right">
-
-							<div class="fileList" id="fileList" align="left">X</div>
-
-									<input class="inputcss filenameInput" type="text" id="fileNameInput" value="myFile">
-
-								<button class="simpleButton" type="button" onclick="saveFile(document.getElementById('fileNameInput').value);">Save</button>
-
-						</div>
-
-
-
-					</div>
-
-				</div>
-
-
-			</div> -->
-
-
-		</div>
-
-
-		<div id="FPSdisplay" style="position: absolute; left:10px; bottom:10px; color: white;">
-		</div>
+		<div id="FPSdisplay" style="position: absolute; left:10px; bottom:10px; color: white;"></div>
 
 		<script type="text/javascript">
 			var mainNode;
 			var newMainNode;
 			var savedState = 0;
 
-			// var tensors, nodes;
 			var selectedObject;
 			var sensor;
+			var universe = new Universe();
 
 			//Main Draw loop
 			function mainLoop(timestamp) {
 				if (newMainNode) {
 					mainNode.truss.clear();
+					universe.pop();
+					universe.current=newMainNode;
+
 					mainNode = newMainNode;
 
-					mainNode.canvas.onmousemove = myMove;
-					mainNode.canvas.onmousedown = downMouse;
-					mainNode.canvas.onmouseup = upMouse;
+					universe.current.canvas.onmousemove = myMove;
+					universe.current.canvas.onmousedown = downMouse;
+					universe.current.canvas.onmouseup = upMouse;
 
 					newMainNode = undefined;
 				}
-				mainNode.tick(timestamp / 1000);
+				universe.current.tick(timestamp / 1000);
 				requestAnimationFrame(mainLoop);
 			}
 
 			// Setting up the canvas and ensure other initialization routines are run
 			function init() {
 				FPSdisplay = document.getElementById("FPSdisplay");
-				trussBackground = document.getElementById("TrussBackground");
 
-				// let configarea = document.getElementById('configarea');
-				//  trussBackground.removeChild(configarea);
+				trussBackground = document.getElementById("temp");
 
-				let configarea=createConfigurationArea("configarea");
-				trussBackground.appendChild(configarea);
-
-				let mainView = new View(new Vector(20, 20), trussBackground);
-				mainNode = new TrussNode(undefined, new Position(0, 0), mainView, 1 / 60, 1, "MainNode", WalkTruss,
-					'TrussBackground');
+				mainNode = new TrussNode(undefined, new Position(0, 0), new Vector(20, 20), 1 / 60, 1, "MainNode", WalkTruss);
 				mainNode.truss.initiate();
+				
+				universe.current=new TrussNode(undefined, new Position(0, 0), undefined, 1 / 60, 1, "StackNode", WalkTruss);
+				universe.current=mainNode;
+				
+				//universe.governors.push(new TrussNode(undefined, new Position(0, 0), undefined, 1 / 60, 1, "alphaNode", WalkTruss));
+				//universe.governors.push(new TrussNode(undefined, new Position(0, 0), undefined, 1 / 60, 1, "betaNode", WalkTruss));
+
+				universe.showUniverse1(document.getElementById('temp'));
 
 				window.requestAnimationFrame(mainLoop);
 
-				mainView.context.canvas.onmousemove = myMove;
-				mainView.context.canvas.onmousedown = downMouse;
-				mainView.context.canvas.onmouseup = upMouse;
+				universe.current.view.context.canvas.onmousemove = myMove;
+				universe.current.view.context.canvas.onmousedown = downMouse;
+				universe.current.view.context.canvas.onmouseup = upMouse;
 
 
-				let connectionDiv = document.getElementById('connectionDiv');
-				let gravitybutton = document.getElementById('gravitybutton');
-				let tensorAdder = document.getElementById('tensorAdder');
-				let debugLevel = document.getElementById('debugLevel');
 
 				document.addEventListener('selectionEvent',
 					function (e) {
@@ -201,8 +99,8 @@
 
 				openBottomPanel(event, 'propertiesDiv');
 
-				// configarea.style.left = "200px";
-				configarea.style.display = "none";
+				universe.current.element.display = "none";
+				updateResize();
 
 			}
 
@@ -252,12 +150,12 @@
 				}
 
 				// Show the current tab, and add an "active" class to the button that opened the tab
-				document.getElementById(divName).style.display = "block";
+				universe.current.getElement('#'+divName).style.display = "block";
 
 				if (evt)
 					evt.currentTarget.classList.add("active");
 				else
-					document.getElementById("propertiesButton").classList.add("active");
+				universe.current.getElement('#'+"propertiesButton").classList.add("active");
 			}
 
 
@@ -275,8 +173,14 @@
 				if (previousSelectedObject) {
 					previousSelectedObject.setHighlight(0);
 				}
+
+
+				let connectionDiv= universe.current.getElement("#connectionDiv");
 				connectionDiv.innerHTML = '';
 				connectionDiv.appendChild(select.generateconnectionHTML());
+
+				let gravityButton= universe.current.getElement("#gravityButton");
+				let tensorAdder= universe.current.getElement("#tensorAdder");
 
 				if (select.isNode) {
 					gravityButton.style.display = 'inline';
@@ -359,7 +263,7 @@
 			}
 
 			function updateResize() {
-				mainNode.resize();
+				universe.current.resize();
 			}
 
 			function movePropertyEdit(configAreaName) {
